fix layout issue; background pictures correctly display

--- a/hypnotic-hedgehogs/a_brief_history_of_web/nineties_blog/static/nineties_blog/css/nineties.css
+++ b/hypnotic-hedgehogs/a_brief_history_of_web/nineties_blog/static/nineties_blog/css/nineties.css
@@ -1,6 +1,7 @@
 #body {
     background-image: url('../nineties_background.jpg');
     background-repeat: repeat;
+    height: 40rem;
 }
 
 
